Update the automatic logs injection sample applications (#1195)
- Add another sample that consumes NLog 4.0, whose JsonLayout does not have the `includeMdc`/`includeMdlc` properties
- Update the `Datadog.Trace` package in the samples to `1.23.0` and allow it to be updated by our versioning tool
- Add `DD_ENV`, `DD_SERVICE`, and `DD_VERSION` to the logger configuration files
- Some general documentation cleanup

--- a/samples/AutomaticTraceIdInjection/NLog40Example/Properties/launchSettings.json
+++ b/samples/AutomaticTraceIdInjection/NLog40Example/Properties/launchSettings.json
@@ -1,11 +1,11 @@
 {
   "profiles": {
-    "SerilogExample": {
+    "NLog40Example": {
       "commandName": "Project",
       "environmentVariables": {
         "DD_LOGS_INJECTION": "true",
         "DD_ENV": "dev",
-        "DD_SERVICE": "SerilogExample",
+        "DD_SERVICE": "NLog40Example",
         "DD_VERSION": "1.0.0"
       }
     }
