--- a/samples/AutomaticTraceIdInjection/Log4NetExample/Properties/launchSettings.json
+++ b/samples/AutomaticTraceIdInjection/Log4NetExample/Properties/launchSettings.json
@@ -1,17 +1,12 @@
 {
   "profiles": {
-    "LaunchWithServiceUnification": {
+    "Log4NetExample": {
       "commandName": "Project",
       "environmentVariables": {
         "DD_LOGS_INJECTION": "true",
-        "DD_ENV": "customer-sample",
-        "DD_VERSION": "1.0.0-beta"
-      }
-    },
-    "LaunchWithoutServiceUnification": {
-      "commandName": "Project",
-      "environmentVariables": {
-        "DD_LOGS_INJECTION": "true"
+        "DD_ENV": "dev",
+        "DD_SERVICE": "Log4NetExample",
+        "DD_VERSION": "1.0.0"
       }
     }
   }
