--- a/samples/AutomaticTraceIdInjection/NLog46Example/Properties/launchSettings.json
+++ b/samples/AutomaticTraceIdInjection/NLog46Example/Properties/launchSettings.json
@@ -1,17 +1,12 @@
 {
   "profiles": {
-    "LaunchWithServiceUnification": {
+    "NLog46Example": {
       "commandName": "Project",
       "environmentVariables": {
         "DD_LOGS_INJECTION": "true",
-        "DD_ENV": "customer-sample",
-        "DD_VERSION": "1.0.0-beta"
-      }
-    },
-    "LaunchWithoutServiceUnification": {
-      "commandName": "Project",
-      "environmentVariables": {
-        "DD_LOGS_INJECTION": "true"
+        "DD_ENV": "dev",
+        "DD_SERVICE": "NLog46Example",
+        "DD_VERSION": "1.0.0"
       }
     }
   }
