--- a/samples/ServiceFabricRemoting/WeatherService/WeatherService.csproj
+++ b/samples/ServiceFabricRemoting/WeatherService/WeatherService.csproj
@@ -9,6 +9,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\DatadogInstall.bat" Link="DatadogInstall.bat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\DatadogInstall.ps1" Link="DatadogInstall.ps1">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.ServiceFabric.Services" Version="4.0.470" />
     <ProjectReference Include="..\WeatherService.Abstractions\WeatherService.Abstractions.csproj" />
   </ItemGroup>
