Add meassurement of native callbacks.

--- a/src/Datadog.Trace.ClrProfiler.Native/Datadog.Trace.ClrProfiler.Native.vcxproj
+++ b/src/Datadog.Trace.ClrProfiler.Native/Datadog.Trace.ClrProfiler.Native.vcxproj
@@ -205,6 +205,7 @@
     <ClInclude Include="pal.h" />
     <ClInclude Include="rejit_handler.h" />
     <ClInclude Include="sig_helpers.h" />
+    <ClInclude Include="stats.h" />
     <ClInclude Include="string.h" />
     <ClInclude Include="util.h" />
     <ClInclude Include="version.h" />
