Changes based on the review.

--- a/.azure-pipelines/runner.yml
+++ b/.azure-pipelines/runner.yml
@@ -190,7 +190,7 @@ jobs:
         benchmarks/**/*.csproj
         !src/Datadog.Trace.Tools.Runner/*.csproj
     env:
-      DD_SERVICE: dd-tracer-dotnet
+      DD_SERVICE: dd-trace-dotnet
       
   - task: NuGetToolInstaller@1
     displayName: install nuget
@@ -208,7 +208,7 @@ jobs:
       msbuildArguments: /t:BuildTool /l:DatadogLogger,"$(DD_DOTNET_TRACER_MSBUILD)"
       maximumCpuCount: true
     env:
-      DD_SERVICE: dd-tracer-dotnet-runner-tool
+      DD_SERVICE: dd-trace-dotnet-runner-tool
 
   - task: MSBuild@1
     displayName: standalone build
@@ -217,7 +217,7 @@ jobs:
       msbuildArguments: /t:BuildStandalone /l:DatadogLogger,"$(DD_DOTNET_TRACER_MSBUILD)"
       maximumCpuCount: true
     env:
-      DD_SERVICE: dd-tracer-dotnet-runner-tool
+      DD_SERVICE: dd-trace-dotnet-runner-tool
 
   - task: DeleteFiles@1
     displayName: 'Remove unneeded files'
