--- a/.azure-pipelines/unit-tests.yml
+++ b/.azure-pipelines/unit-tests.yml
@@ -88,7 +88,7 @@ jobs:
         test/benchmarks/**/*.csproj
         !src/Datadog.Trace.Tools.Runner/*.csproj
     env:
-      DD_SERVICE: dd-tracer-dotnet
+      DD_SERVICE: dd-trace-dotnet
 
   - task: DotNetCoreCLI@2
     displayName: dotnet test
@@ -97,7 +97,7 @@ jobs:
       configuration: $(buildConfiguration)
       projects: test/**/*.Tests.csproj
     env:
-      DD_SERVICE: dd-tracer-dotnet
+      DD_SERVICE: dd-trace-dotnet
 
 - job: managed_linux_arm64
   pool: Arm64
@@ -118,7 +118,7 @@ jobs:
         benchmarks/**/*.csproj
         !src/Datadog.Trace.Tools.Runner/*.csproj
     env:
-      DD_SERVICE: dd-tracer-dotnet
+      DD_SERVICE: dd-trace-dotnet
 
   - task: DotNetCoreCLI@2
     displayName: dotnet test
@@ -127,7 +127,7 @@ jobs:
       configuration: $(buildConfiguration)
       projects: test/**/*.Tests.csproj
     env:
-      DD_SERVICE: dd-tracer-dotnet
+      DD_SERVICE: dd-trace-dotnet
 
 - job: managed_macos
   pool:
@@ -178,7 +178,7 @@ jobs:
       configuration: $(buildConfiguration)
       projects: test/**/*.Tests.csproj
     env:
-      DD_SERVICE: dd-tracer-dotnet
+      DD_SERVICE: dd-trace-dotnet
 
 
 - job: windows_profiler
