DynamicDiagnosticSourceBindings: Debugging dynamic reloading scenarios.

--- a/src/Shared-Libs/DynamicDiagnosticSourceBindings/NuGet.config
+++ b/src/Shared-Libs/DynamicDiagnosticSourceBindings/NuGet.config
@@ -16,4 +16,7 @@
   <disabledPackageSources>
     <clear />
   </disabledPackageSources>
+  <config>
+    <add key="repositorypath" value="../../../packages" />
+  </config>
 </configuration>
