--- a/samples/Datadog.DynamicDiagnosticSourceBindings.Demo/Simple.NetFx45/Datadog.DynamicDiagnosticSourceBindings.Demo.Simple.NetFx45.csproj
+++ b/samples/Datadog.DynamicDiagnosticSourceBindings.Demo/Simple.NetFx45/Datadog.DynamicDiagnosticSourceBindings.Demo.Simple.NetFx45.csproj
@@ -67,6 +67,7 @@
     </Compile>
     <Compile Include="$(SharedSrcBaseDir)Datadog.Util\internal\Validate.cs">
       <DependentUpon>_internal_.files</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
