--- a/samples/Datadog.DynamicDiagnosticSourceBindings.Demo/Simple.NetFx45/Datadog.DynamicDiagnosticSourceBindings.Demo.Simple.NetFx45.csproj
+++ b/samples/Datadog.DynamicDiagnosticSourceBindings.Demo/Simple.NetFx45/Datadog.DynamicDiagnosticSourceBindings.Demo.Simple.NetFx45.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="UseDiagnosticSourceStub.cs" />
+    <Compile Include="..\Shared-Demo-Src\DynamicDiagnosticSourceBindings.Demo\internal\ConsoleWrite.cs" />
   </ItemGroup>
   <ItemGroup>
     <!-- The two following items trick the Solution Explorer in VS to display a folder  -->
