--- a/test/Vendored.System.Diagnostics.DiagnosticSource.Tests/NuGet.config
+++ b/test/Vendored.System.Diagnostics.DiagnosticSource.Tests/NuGet.config
@@ -14,4 +14,7 @@
   <disabledPackageSources>
     <clear />
   </disabledPackageSources>
+  <config>
+    <add key="RepositoryPath" value="../../packages" />
+  </config>
 </configuration>
