--- a/samples/Datadog.Logging.Demo/EmitterAndComposerApp/Datadog.Logging.Demo.EmitterAndComposerApp.csproj
+++ b/samples/Datadog.Logging.Demo/EmitterAndComposerApp/Datadog.Logging.Demo.EmitterAndComposerApp.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
   
   <PropertyGroup>
-    <SharedSrcBaseDir>$(MSBuildThisFileDirectory)..\..\src\Shared-Src</SharedSrcBaseDir>
+    <SharedSrcBaseDir>$(MSBuildThisFileDirectory)..\..\..\src\Shared-Src</SharedSrcBaseDir>
   </PropertyGroup>
 
   <!-- Datadog.Logging.Emission.props is required for emitting logs: -->
@@ -26,11 +26,11 @@
     
     <!-- Log.tt is a T4 template that refers to the Log.tt.cs templete referenced in Datadog.Logging.Emission.props.                     -->
     <!-- It ensures that the Log Emission API is correctly generated.                                                                    -->
-    <None Update="Datadog.Logging.Demo\public\Log.tt">
+    <None Update="Datadog.Logging.Demo.EmitterAndComposerApp\public\Log.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Log.cs</LastGenOutput>
     </None>
-    <Compile Update="Datadog.Logging.Demo\public\Log.cs">
+    <Compile Update="Datadog.Logging.Demo.EmitterAndComposerApp\public\Log.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>Log.tt</DependentUpon>
@@ -40,11 +40,11 @@
   <ItemGroup>
     <!-- LogComposer.tt is a T4 template that refers to the LogComposer.tt.cs templete referenced in Datadog.Logging.Composition.props.  -->
     <!-- It ensures that the Log Composition API is correctly generated.                                                                 -->
-    <None Update="Datadog.Logging.Demo\internal\LogComposer.tt">
+    <None Update="Datadog.Logging.Demo.EmitterAndComposerApp\internal\LogComposer.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>LogComposer.cs</LastGenOutput>
     </None>
-    <Compile Update="Datadog.Logging.Demo\internal\LogComposer.cs">
+    <Compile Update="Datadog.Logging.Demo.EmitterAndComposerApp\internal\LogComposer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>LogComposer.tt</DependentUpon>
