- Update shared libraries and added pal.h and environment_variables.h

--- a/src/Shared-Src/Native/Shared.ManagedLibraryLoader.vcxitems.filters
+++ b/src/Shared-Src/Native/Shared.ManagedLibraryLoader.vcxitems.filters
@@ -53,5 +53,11 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)miniutfdata.h">
       <Filter>ManagedLibraryLoader-Dependencies</Filter>
     </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)pal.h">
+      <Filter>ManagedLibraryLoader-Dependencies</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)environment_variables.h">
+      <Filter>ManagedLibraryLoader-Dependencies</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
