Add testing of unhandled exception handling
Tests several different scenarios:
- No error handling middleware, HttpServer handles the exception
- Standard developer exception page
- Error handling middleware with pipeline reexecution
- Custom Handler, which only catches a subset of errors

Used multiple Mapped pipelines to make testing the different paths easier. Hardest thing was hitting the edge case path in Kestrel for when the request is malformed, as that was made internal in 3.0, but is still worth testing I think

--- a/test/test-applications/integrations/Samples.AspNetCoreRazorPages/Samples.AspNetCoreRazorPages.csproj
+++ b/test/test-applications/integrations/Samples.AspNetCoreRazorPages/Samples.AspNetCoreRazorPages.csproj
@@ -9,5 +9,8 @@
   <ItemGroup Condition=" $(TargetFramework.StartsWith('netcoreapp2')) ">
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
-
+  
+  <ItemGroup>
+    <Compile Include="..\..\..\Datadog.Trace.Tests\DiagnosticListeners\ErrorHandlingHelper.cs" Link="ErrorHandlingHelper.cs" />
+  </ItemGroup>
 </Project>
