--- a/samples/Datadog.Logging.Demo/EmitterLib/Datadog.Logging.Demo.EmitterLib.csproj
+++ b/samples/Datadog.Logging.Demo/EmitterLib/Datadog.Logging.Demo.EmitterLib.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -12,12 +12,6 @@
   <!-- Datadog.Logging.Emission.props is required for emitting logs: -->
   <Import Project="$(SharedSrcBaseDir)\Datadog.Logging\Datadog.Logging.Emission.props" Condition="$(LogEmissionPropsIncluded) == ''" />
 
-  <!-- Datadog.Logging.Composition.props is required for composing logs and chosing a log sink: -->
-  <Import Project="$(SharedSrcBaseDir)\Datadog.Logging\Datadog.Logging.Composition.props" Condition="$(LogCompositionPropsIncluded) == ''" />
-  <ItemGroup>
-    <ProjectReference Include="..\EmitterLib\Datadog.Logging.Demo.EmitterLib.csproj" />
-  </ItemGroup>
-
   <ItemGroup>
   	<!-- This "service" is required for T4-templating.                                                                                   -->
 	  <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
@@ -29,28 +23,14 @@
     
     <!-- Log.tt is a T4 template that refers to the Log.tt.cs templete referenced in Datadog.Logging.Emission.props.                     -->
     <!-- It ensures that the Log Emission API is correctly generated.                                                                    -->
-    <None Update="Datadog.Logging.Demo.EmitterAndComposerApp\public\Log.tt">
+    <None Update="Datadog.Logging.Demo.EmitterLib\public\Log.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Log.cs</LastGenOutput>
     </None>
-    <Compile Update="Datadog.Logging.Demo.EmitterAndComposerApp\public\Log.cs">
+    <Compile Update="Datadog.Logging.Demo.EmitterLib\public\Log.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>Log.tt</DependentUpon>
-    </Compile>
-  </ItemGroup>
-  
-  <ItemGroup>
-    <!-- LogComposer.tt is a T4 template that refers to the LogComposer.tt.cs templete referenced in Datadog.Logging.Composition.props.  -->
-    <!-- It ensures that the Log Composition API is correctly generated.                                                                 -->
-    <None Update="Datadog.Logging.Composition\internal\LogComposer.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>LogComposer.cs</LastGenOutput>
-    </None>
-    <Compile Update="Datadog.Logging.Composition\internal\LogComposer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>LogComposer.tt</DependentUpon>
     </Compile>
   </ItemGroup>
 
