--- a/src/Shared-Src/Datadog.Logging/Datadog.Logging.Emission.props
+++ b/src/Shared-Src/Datadog.Logging/Datadog.Logging.Emission.props
@@ -15,22 +15,22 @@
     
     <IncludedSharedLogEmissionCompileItem Include="$(MSBuildThisFileDirectory)" />
     
-    <IncludedSharedLogEmissionCompileItem Include="$(MSBuildThisFileDirectory)..\Datadog.Logging.Emission\internal\DefaultFormat.cs" />
-    <IncludedSharedLogEmissionCompileItem Include="$(MSBuildThisFileDirectory)..\Datadog.Logging.Emission\internal\SimpleConsoleSink.cs" />
-    <IncludedSharedLogEmissionCompileItem Include="$(MSBuildThisFileDirectory)..\Datadog.Logging.Emission\internal\LogSourceInfo.cs" />
+    <IncludedSharedLogEmissionCompileItem Include="$(MSBuildThisFileDirectory)..\..\Shared-Src\Datadog.Logging.Emission\internal\DefaultFormat.cs" />
+    <IncludedSharedLogEmissionCompileItem Include="$(MSBuildThisFileDirectory)..\..\Shared-Src\Datadog.Logging.Emission\internal\SimpleConsoleSink.cs" />
+    <IncludedSharedLogEmissionCompileItem Include="$(MSBuildThisFileDirectory)..\..\Shared-Src\Datadog.Logging.Emission\internal\LogSourceInfo.cs" />
     
-    <ExcludedSharedLogEmissionCompileItems Include="$(MSBuildThisFileDirectory)..\**\*.cs" Exclude="@(IncludedSharedLogEmissionCompileItem)" />
-    <Compile Include="$(MSBuildThisFileDirectory)..\**\*.cs" Exclude="@(ExcludedSharedLogEmissionCompileItems)" />
+    <ExcludedSharedLogEmissionCompileItems Include="$(MSBuildThisFileDirectory)..\..\**\*.cs" Exclude="@(IncludedSharedLogEmissionCompileItem)" />
+    <Compile Include="$(MSBuildThisFileDirectory)..\..\**\*.cs" Exclude="@(ExcludedSharedLogEmissionCompileItems)" />
   </ItemGroup>
 
   <ItemGroup Condition="@(IncludedSharedLogEmissionNoActionItem->Count()) == 0">
     <!-- Same trick as for Shared Compile Items (see above), but for no-build-action inclusions.                                   -->
 
     <!-- *** Cross-project-shared files needed by all projects that use Log.tt.cs: ***                                             -->
-    <IncludedSharedLogEmissionNoActionItem Include="$(MSBuildThisFileDirectory)..\Datadog.Logging\public\Log.tt.cs" />
+    <IncludedSharedLogEmissionNoActionItem Include="$(MSBuildThisFileDirectory)..\..\Shared-Src\Datadog.Logging\public\Log.tt.cs" />
 
-    <ExcludedSharedLogEmissionNoActionItems Include="$(MSBuildThisFileDirectory)..\**\*.tt.cs" Exclude="@(IncludedSharedLogEmissionNoActionItem)" />
-    <None Include="$(MSBuildThisFileDirectory)..\**\*.tt.cs" Exclude="@(ExcludedSharedLogEmissionNoActionItems)" />
+    <ExcludedSharedLogEmissionNoActionItems Include="$(MSBuildThisFileDirectory)..\..\**\*.tt.cs" Exclude="@(IncludedSharedLogEmissionNoActionItem)" />
+    <None Include="$(MSBuildThisFileDirectory)..\..\**\*.tt.cs" Exclude="@(ExcludedSharedLogEmissionNoActionItems)" />
   </ItemGroup>
 
   <ItemGroup Condition="@(T4ServiceGuidIncluded->Count()) == 0">
